# HelloCplusplus

./: .clang-format  CMakeLists.txt  README.md  hello.code-workspace  makefile
include/: calc.h  message.h  message_manager.h
src/: calc.cpp  message_manager.cpp
test/: .gitignore  CMakeLists.txt  env_setting.cmake  main.cpp
test/framework/: CMakeLists.txt
test/framework/gmock_test/: CMakeLists.txt
test/framework/gtest/: CMakeLists.txt
test/framework/mockcpp/: CMakeLists.txt
test/framework/mockcpp/include/mockcpp/: mockcpp.h
test/framework/mockcpp/src/: CMakeLists.txt
test/include/: first_fixture_test.h  global_environment.h
test/script/: build.sh  clean.sh  cov_build.sh
test/script/cov_script/: cov.py  cov.sh
test/src/: calc_test.cpp  first_fixture_test.cpp  first_test.cpp  mock_test.cpp  mockcpp_test.cpp
